<resources>
    <string name="app_name">Airline Ticket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="canadian_dollar">Canadian Dollar</string>
    <string name="cad">CAD</string>
    <string name="countryFlag">countryFlag</string>
    <string name="selectCurrency">Select Currency</string>
    <string name="no_notification">No Notification</string>
    <string name="notification">Notifications</string>
    <string name="ing">Home</string>
    <string name="ngn">NGN</string>
    <string name="select_city">Select City</string>
    <string name="from">From</string>
    <string name="where_to">Where To?</string>
    <string name="destination">Destination</string>
    <string name="check_in">Check-in</string>
    <string name="bookings">Bookings</string>
    <string name="flights">Flights</string>
    <string name="airplaneicon">airplaneIcon</string>
    <string name="upcoming_trip">Upcoming trip</string>
    <string name="no_trip">No trip</string>
    <string name="bracket_close">)</string>
    <string name="akr">AKR</string>
    <string name="akure">Akure</string>
    <string name="bracket_open">(</string>
    <string name="nigeria">Nigeria</string>
    <string name="contact_us">Contact us</string>
    <string name="rate_us">Rate us</string>
    <string name="check_in2">Check In</string>
    <string name="surname">Surname</string>
    <string name="booking_reference">Booking reference</string>
    <string name="get_booking">Get Booking</string>
    <string name="search_flight">Search Flight</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="departure_date">Departure Date</string>
    <string name="tue_02_may_2023">Tue, 02 May 2023</string>
    <string name="return_date">Return Date</string>
    <string name="_1_adult_0_children_0_infants">1 Adult, 0 Children, 0 Infants</string>
    <string name="passengers">Passengers</string>
    <string name="covid_19_update">Covid-19 update</string>
    <string name="adult_12">Adult(12+)</string>
    <string name="_1">1</string>
    <string name="_0_infants">0 Infants</string>
    <string name="_0_children">0 Children,</string>
    <string name="_0_adult">0 Adult,</string>
</resources>