<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/selectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akure"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/akure2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_open"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="7dp"
        app:layout_constraintStart_toEndOf="@+id/selectName"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/selectCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akr"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/akure2"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket_close"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/selectCode"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/selectCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nigeria"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectName"/>


</androidx.constraintlayout.widget.ConstraintLayout>