<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:background="@color/white"
    tools:context=".ui.BookingsFragment">

    <EditText
        android:id="@+id/checkInBookingReference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/check_in_background"
        android:hint="@string/booking_reference"
        android:padding="15dp"
        android:textColor="#6A6A6A"
        android:textColorHint="#9D9D9D"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkInSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/check_in_background"
        android:drawableStart="@drawable/surname"
        android:drawablePadding="10dp"
        android:hint="@string/surname"
        android:padding="15dp"
        android:textColor="#6A6A6A"
        android:textColorHint="#9D9D9D"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkInBookingReference" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="17dp"
        android:text="@string/get_booking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/checkInSurname"
        tools:layout_editor_absoluteX="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>