<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ing"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/ngn"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/home"
                app:layout_constraintEnd_toStartOf="@id/downArrow"
                app:layout_constraintTop_toTopOf="@id/home" />


            <ImageView
                android:id="@+id/downArrow"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/down"
                app:layout_constraintBottom_toBottomOf="@id/home"
                app:layout_constraintEnd_toStartOf="@id/notificationBell"
                app:layout_constraintTop_toTopOf="@id/home" />


            <ImageView
                android:id="@+id/notificationBell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/notification_bell"
                app:layout_constraintBottom_toBottomOf="@id/home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/home" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/destination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/destination"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/from"
                        android:textColor="@color/app_text_color"
                        app:layout_constraintStart_toEndOf="@id/destination"
                        app:layout_constraintTop_toTopOf="@+id/destination" />

                    <TextView
                        android:id="@+id/selectCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/select_city"
                        android:textColor="@color/app_text_color"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@id/destination"
                        app:layout_constraintTop_toBottomOf="@+id/from" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="12dp"
                        android:background="#DFDEDE"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/destination"
                        app:layout_constraintTop_toBottomOf="@+id/selectCity" />

                    <TextView
                        android:id="@+id/going"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/destination"
                        android:textColor="@color/app_text_color"
                        app:layout_constraintStart_toEndOf="@id/destination"
                        app:layout_constraintTop_toBottomOf="@id/line" />

                    <TextView
                        android:id="@+id/WhereTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/where_to"
                        android:textColor="@color/app_text_color"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@id/destination"
                        app:layout_constraintTop_toBottomOf="@+id/going" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainHead">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/flights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F57260"
                app:cardCornerRadius="100dp"
                app:cardElevation="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/airplane"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flights"
                android:textSize="16sp"
                android:textColor="#FF656060"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/flights"
                app:layout_constraintEnd_toEndOf="@id/flights"
                app:layout_constraintStart_toStartOf="@id/flights"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/checkIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF2C73"
                app:cardCornerRadius="100dp"
                app:cardElevation="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toEndOf="@id/flights"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/check_in"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Check-in"
                android:textSize="16sp"
                android:textColor="#FF656060"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/checkIn"
                app:layout_constraintEnd_toEndOf="@id/checkIn"
                app:layout_constraintStart_toStartOf="@id/checkIn"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bookings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CABFD"
                app:cardCornerRadius="100dp"
                app:cardElevation="10dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toEndOf="@id/checkIn"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:src="@drawable/booking"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bookings"
                android:textSize="16sp"
                android:textColor="#FF656060"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/bookings"
                app:layout_constraintEnd_toEndOf="@id/bookings"
                app:layout_constraintStart_toStartOf="@id/bookings"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>